--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -w",
-    "dev": "webpack-dev-server"
+    "build" : "webpack",
+    "dev": "webpack-dev-server",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +32,7 @@
   "dependencies": {
     "alt": "^0.18.6",
     "alt-utils": "^1.0.0",
+    "express": "^4.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.0",
